--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -32,6 +32,9 @@
   					<li class="nav-item">
   						<a class="nav-link active" href="{% url 'blog:home' %}"><i style="font-size:24px" class="fa">&#xf015;</i> Home</a>
   					</li>
+					<li class="nav-item">
+  						<a class="nav-link " href="{% url 'questions:question_list' %}"> Questions</a>
+  					</li>
   					<li class="nav-item">
   						<a class="nav-link" href="{% url 'blog:contact' %}"><i style="font-size:24px" class="fa">&#xf003;</i> Contact</a>
   					</li>
