add some design

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -39,7 +39,7 @@
   						<a class="nav-link active" href="{% url 'blog:home' %}"><i style="font-size:24px" class="fa">&#xf015;</i> Home</a>
   					</li>
 					<li class="nav-item">
-  						<a class="nav-link " href="{% url 'questions:question_list' %}"> Questions</a>
+  						<a class="nav-link " href="{% url 'questions:question_list' %}"><i style="font-size:24px" class="fa">&#xf128;</i> Questions</a>
   					</li>
   					<li class="nav-item">
   						<a class="nav-link" href="{% url 'blog:contact' %}"><i style="font-size:24px" class="fa">&#xf003;</i> Contact</a>
@@ -79,6 +79,7 @@
 
     {% block body %}
     {% endblock %}
+
 
 </div>
 <!-- Footer -->
