--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -21,7 +21,8 @@
     <script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script>
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
 	<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
-	<script src="/static/base/js/main.js"></script> <script>hljs.initHighlightingOnLoad();</script>
+	<script src="/static/base/js/main.js"></script>
+	<script>hljs.initHighlightingOnLoad();</script>
     <title>{% block title %} {% endblock %}</title>
 
 </head>
