add some desgin

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -2,23 +2,22 @@
 {% block title %} home {% endblock %}
 
 {% block body %}
-<div class="container-fluid"></div>
-    <ul>
-        <div >
+<div class="container"></div>
+
+
             {% for post in post %}
+                <div class="container" style=" background:#E1DDBC">
                     <a href="{% url 'blog:user_posts' post.author.username %}"><img class="rounded-circle" src="{{ post.author.profile.image.url }}"></a>
-                    <a href="{% url 'blog:user_posts' post.author.username  %}">{{ post.author }}</a>
-
-                    <small>{{ post.date_post |date }}</small>
-
-                       <p> <a href="{% url 'blog:detail' post.pk %}">{{ post.title }} </a></p>
-
+                    <p><a href="{% url 'blog:user_posts' post.author.username  %}">{{ post.author }}</a></p><hr/>
+                    <p> <a href="{% url 'blog:detail' post.pk %}">{{ post.title }} </a></p>
                     <p>{{ post.subject |safe  }}</p>
+                    <p><small>{{ post.date_post |date }}  &nbsp;&nbsp;&nbsp; <a href="{% url 'blog:detail' post.pk %}">{{ post.comments.count}} comments</a></small></p>
 
+                 </div>
             {% endfor %}
-       </div>
 
-    </ul>
+
+
      {% if is_paginated %}
 
       {% if page_obj.has_previous %}
