configuring the api

--- a/users/templates/users/profile_update.html
+++ b/users/templates/users/profile_update.html
@@ -9,7 +9,7 @@
      {{ u_form.as_table }}
      {{ p_form.as_table }}
   </table>
-<input type="submit" value="Update">
+<input class="btn btn-primary" type="submit" value="Update">
 </form>
 
 
